# web-enigma

./: .dockerignore  .env  .env.example  .gitignore  BACKTEST.md  Dockerfile  Makefile  README.md  agents.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
configs/: intraday_v1.yaml  risk_v1.yaml
docs/: docker-compose.md  feature-snapshots-and-outcome-labels.md  intraday_forecast_model_design.md  k8s-trading-agent-design.md  live-runtime.md  local-development.md  market-data-sentiment-features-and-pipeline.md  parquet-schema-contracts.md
experiments/: substantial_tuned_lower_churn.yaml  substantial_zero_commission.yaml  volume_rally_baseline_1m.yaml  volume_rally_gross_edge_5m.yaml  volume_rally_tuned_5m.yaml  volume_rally_v2_5m.yaml  volume_rally_v2_core_12m.yaml  volume_rally_v2_core_5m.yaml  volume_rally_v2_relaxed_5m.yaml  volume_rally_v2_symbol_spikes_5m.yaml  volume_rally_v2_tuned_5m.yaml  volume_rally_v2_tuned_b_5m.yaml  volume_rally_validation.md
resources/: etf_descriptions.json  snp_etf.json
scripts/: api_port_forwards_tmux.sh  bootstrap_backtest_workflows_namespace.sh  k8s.env  k8s_kubectl.sh  print_api_serve_prerequisites.sh  source_env_preserve_exports.sh  sync_app_secrets_from_env.sh  test_argo_inline.sh
tests/: conftest.py  daily_index_forecast_feature_test_utils.py  test_alpaca_cache_loader.py  test_alpaca_executor.py  test_api.py  test_api_output_dir_defaults.py  test_argo.py  test_argo_inspection.py  test_argo_payload.py  test_argo_progress.py  test_argo_progress_status.py  test_auditor_logging.py  test_backtest_artifacts.py  (+61 more)
(+517 files in other folders)
